src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Master Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost%3A Dead</fullName>
        </values>
        <values>
            <fullName>Closed Lost%3A Duplicate</fullName>
        </values>
        <values>
            <fullName>Closed Lost%3A Rejected</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Closed%3A Junk</fullName>
        </values>
        <values>
            <fullName>Project Postponed</fullName>
        </values>
        <values>
            <fullName>Value Proposition</fullName>
        </values>
        <values>
            <fullName>Waiting for approval</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>Account.Name</formula>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>All_Agents_with_last_7_days_activity__c</fullName>
        <formula>Instance__r.AllAgentsWithLast7DaysActivity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>All Agents with last 7 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>All_Traffic_Sources__c</fullName>
        <label>All Traffic Sources</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Amount_Lost__c</fullName>
        <formula>IF( IsClosed = TRUE, IF(  IsWon = FALSE,  Amount, 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Lost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Amount_Won__c</fullName>
        <formula>IF( IsClosed = TRUE, IF(  IsWon = TRUE,  Amount, 0), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Amount Won</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Authority__c</fullName>
        <description>Mapped with the custom field of lead object to make it visible under Opportunities page</description>
        <label>Authority</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Decision Maker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Evaluator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Supporting Evaluator</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Authority_determined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Authority determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_determined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budgeted__c</fullName>
        <description>Mapped with the custom field from Lead object to make it visible in Opportunities</description>
        <label>Budgeted</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Label__c</fullName>
        <formula>IF( IsClosed = TRUE, IF(  IsWon = TRUE, &quot;Won&quot;, &quot;Lost&quot;), &quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Close Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClosedBy__c</fullName>
        <label>ClosedBy</label>
        <picklist>
            <picklistValues>
                <fullName>Agent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors</label>
        <picklist>
            <picklistValues>
                <fullName>Desk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freshdesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help Scout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not evaluating others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Zendesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HappyFox</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Complete_Age__c</fullName>
        <formula>IF(CloseDate - DATEVALUE( Lead_Creation_Date__c )==-1,0,CloseDate - DATEVALUE(Lead_Creation_Date__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Complete Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ContractTerm__c</fullName>
        <label>Contract Term</label>
        <picklist>
            <picklistValues>
                <fullName>Monthly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bi Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 years</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 years+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_System__c</fullName>
        <description>Mapped with the custom field of Lead object to make it visible in the Opportunities page</description>
        <label>Current System</label>
        <picklist>
            <picklistValues>
                <fullName>Another Helpdesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Freshdesk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Front</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gmail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Help Scout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Home grown system</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intercom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako Classic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Prior Support Function</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nothing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Older Kayako Version</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outlook</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shared Inbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Zendesk</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Currently_Using__c</fullName>
        <inlineHelpText>Who or What are they currently using</inlineHelpText>
        <label>Currently Using</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customers_with_last_7_days_activity__c</fullName>
        <formula>Instance__r.CustomersWithLast7DaysActivity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Customers with last 7 days activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <description>Mapped with the custom field of lead object to make it visible at Opportunities page</description>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Domain__c</fullName>
        <formula>Instance__r.Name</formula>
        <label>Domain</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DuplicateOf__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Duplicate Of</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Opportunity.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.AccountId</valueField>
            </filterItems>
            <filterItems>
                <field>Opportunity.StageName</field>
                <operation>notContain</operation>
                <value>Closed</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ExpiryEmailSent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Expiry email sent</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Factors__c</fullName>
        <label>Factors</label>
        <picklist>
            <picklistValues>
                <fullName>Regional Issues/Data Residency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Serve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unresponsive/Timeline</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Family__c</fullName>
        <label>Family</label>
        <picklist>
            <picklistValues>
                <fullName>kayako4_ondemand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>kayako4_download</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>novo_grandfathered</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>novo</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GA_Client_ID_Formula__c</fullName>
        <formula>gaconnector_Google_Analytics_Client_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GA Client ID (Formula)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GCLID__c</fullName>
        <label>GCLID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IP_Address__c</fullName>
        <description>IP Address of lead Origination</description>
        <inlineHelpText>IP Address of lead Origination</inlineHelpText>
        <label>IP Address</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Included_In_Drip_Date__c</fullName>
        <label>Included In Drip Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Instance_ID__c</fullName>
        <formula>Instance__r.Instance_ID__c</formula>
        <label>Instance ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Instance__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Instance</label>
        <referenceTo>Instance__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Prime__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Prime</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KA_Closed_Lost_Details__c</fullName>
        <description>This field will store the closed lost details for the opportunity.</description>
        <label>Closed Lost Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KA_Closed_Won_Details__c</fullName>
        <label>Closed Won Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>KA_Closed_Won_Reason__c</fullName>
        <label>Closed Won Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Contract term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Residency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Features</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free upgrade to Novo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform Advantage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Serve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>KA_Domain__c</fullName>
        <label>Domain</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KA_ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>KA_InstanceID__c</fullName>
        <label>Instance ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>KA_TotangoScore__c</fullName>
        <label>Totango Score</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>KA_TrialExpiryDate__c</fullName>
        <label>Trial Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastActivityAge__c</fullName>
        <formula>TODAY() -  LastActivityDate</formula>
        <label>LastActivityAge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LastContactAt__c</fullName>
        <label>Last Contact At</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LastModifiedAge__c</fullName>
        <formula>DATETIMEVALUE( TODAY() ) -  LastModifiedDate</formula>
        <label>LastModifiedAge</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadOpportunityCreatedAge__c</fullName>
        <formula>CreatedDate - Lead_Creation_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Lead to Opportunity Created Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LeadOwner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Lead_Creation_Date__c</fullName>
        <label>Lead Creation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Lead_ID__c</fullName>
        <label>Lead ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Infer_Fit_Score_0_100__c</fullName>
        <label>Lead Infer: Fit Score [0-100]</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lead_Infer_Fit_Score__c</fullName>
        <label>Lead Infer: Fit Score</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lead_Owner_Email__c</fullName>
        <label>Lead Owner Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>LostDate__c</fullName>
        <label>Stage To Lost Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LostReason__c</fullName>
        <description>Why the opportunity was lost</description>
        <inlineHelpText>This is the reason the opportunity was lost</inlineHelpText>
        <label>Lost Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Authority</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Timing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Decision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Feature</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competition</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Need</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal (IT built, etc)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Poor Qualification</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lost Momentum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platform dependency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Needs_determined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Needs determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <description>The long text area for the next steps.</description>
        <label>Next Steps</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <description>Field for Inside SDR, Sales, or other notes.</description>
        <inlineHelpText>Field for Inside SDR, Sales, or other notes.</inlineHelpText>
        <label>Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>OrderID__c</fullName>
        <label>OrderID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_ID__c</fullName>
        <formula>HYPERLINK(&quot;https://my.kayako.com/intranet/backendui/Order/Edit/&quot; &amp;TEXT( OrderID__c ),TEXT( OrderID__c ) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Order ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Original_Promo_Code__c</fullName>
        <description>DO NOT CHANGE OR EDIT THIS FIELD! Original Promotional Code from initial lead creation for Marketing purposes</description>
        <inlineHelpText>DO NOT CHANGE OR EDIT THIS FIELD! Original Promotional Code from initial lead creation for Marketing purposes</inlineHelpText>
        <label>Original Promo Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <label>Plan</label>
        <picklist>
            <controllingField>Product__c</controllingField>
            <picklistValues>
                <fullName>Fusion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Engage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Growth</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Free</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inbox</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Scale</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Previous Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>Kayako 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako (Kayako 4 OnDemand)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako (Kayako 3 -&gt; 4 OnDemand)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako (Kayako 4 (July 2014))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako (July 2016)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako (Download Perpetual Upgrade (July 2016))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako (Nov 2016)</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako (Download Perpetual Upgrade (Nov 2016))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako 4 (Download Perpetual to Subscription (Dec 2016))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako 4 Renewals (Nov 2010)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako 4 Renewals (April 2013)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako 4 OnDemand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako 4 (July 2014)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako 3 -&gt; 4 Renewals (Nov 2010)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako 3 -&gt; 4 OnDemand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako (Kayako 4 (Download Perpetual to Subscription (Dec 2016)))</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako (June 2017)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kayako (Download Perpetual Upgrade (June 2017))</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Proposed_Kayako_Plan__c</fullName>
        <label>Proposed Kayako Plan</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Reassigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Reassigned_To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Revenue__c</fullName>
        <label>Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <description>Mapped with the custom field of lead object to make it visible in the Opportunities page</description>
        <label>Role</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>CEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Founder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agent/Executive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Sales_Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Consultant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.UserRole.Name</field>
                <operation>equals</operation>
                <value>Customer Success Manager</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Seats_Needed__c</fullName>
        <description>Estimated number of seat licences needed.</description>
        <label>Seats Needed</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Seats__c</fullName>
        <description>Mapped with Lead object custom field</description>
        <label>Seats</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SendOwnerChangeEmail__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SendOwnerChangeEmail</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Stable_Subscription__c</fullName>
        <description>Used internally by BizOps for self-service opportunity</description>
        <label>Stable Subscription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>StageToDemoDate__c</fullName>
        <label>Stage To Demo Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StageToNegotiationDate__c</fullName>
        <label>Stage To Negotiation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StageToProposalDate__c</fullName>
        <label>Stage To Proposal Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>StageToValuePropositionDate__c</fullName>
        <label>Stage To Value Proposition Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Stage_to_MQL_date__c</fullName>
        <label>Stage to MQL date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription__c</fullName>
        <label>Subscription</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TCV__c</fullName>
        <description>This will store the Total Contract Value.
Suppose someone buys a $100/seat/mo product and 10 seats for 2 years.
MRR: $1000
ARR: $12000
TCV: $24000</description>
        <label>TCV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Team_Size__c</fullName>
        <label>Team Size</label>
        <picklist>
            <picklistValues>
                <fullName>1-4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5-10</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <formula>Territory2.DeveloperName</formula>
        <label>Territory</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>The_number_of_seats__c</fullName>
        <defaultValue>0</defaultValue>
        <label>The number of seats</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Timeline_determined__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Timeline determined</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Trial_Expiry_Date__c</fullName>
        <formula>Instance__r.Expiry_Date__c</formula>
        <label>Trial Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Used_For__c</fullName>
        <description>Mapped with the custom field of lead object to make it visible under the Opportunities page</description>
        <label>Used For</label>
        <picklist>
            <picklistValues>
                <fullName>Unanswered</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Internal stakeholder</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer support</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>WonDate__c</fullName>
        <label>Stage To Won Date</label>
        <type>Date</type>
    </fields>
</CustomObject>